Add poem and quiz

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div id='main'>Hello World!</div>
+    <div id='main'></div>
     <script src='build/index.js'></script>
   </body>
 </html>
